# ExpressionDetector

./: CMakeLists.txt  ExpressionDetector.cpp  ExpressionDetector.hpp  ExpressionDetector.qrc  ExpressionDetector.sln  ExpressionDetector.ui  ExpressionDetector.vcxproj  ExpressionDetector.vcxproj.filters  FaceDetection.cpp  FaceDetection.hpp  ImageManager.hpp  README.md  main.cpp
cmake/: DeployQt.cmake
src/: ExpressionDetector.cpp  ExpressionDetector.hpp  FaceDetection.cpp  FaceDetection.hpp  ImageManager.cpp  ImageManager.hpp  main.cpp
src/style/: ExpressionDetector.stylesheet
style/: ExpressionDetector.stylesheet
training/: facial_expression_training.py
